Edit homepage add list-new-song

--- a/index.html
+++ b/index.html
@@ -800,7 +800,6 @@
 				</div>
 			</div>
 		</section>
-    
 		<section class="recently-listen">
 			<div class="container">
 				<div class="row">
@@ -1396,6 +1395,549 @@
 				</div>
 			</div>
 		</section>
+		<section class="new-songs">
+			<div class="container">
+				<div class="row">
+				<div class="col-md-4">
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Xin Cô Đơn Đi</div>
+							<div class="artist-singer">K-ICM, APJ</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/fc329ba9455f7e596aa24e798134bf18.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Xa Mặt Đã Cách Lòng</div>
+							<div class="artist-singer">Thùy Chi</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Lời Anh Muốn Nói</div>
+							<div class="artist-singer">Jon</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						      <img src="./images/5106e4259047de14e0d50ff01891dfe7.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Cứ Vội Vàng</div>
+							<div class="artist-singer">Minh Vương M4U</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Thiệp Hồng</div>
+							<div class="artist-singer">Thùy Chi</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Xin Cô Đơn Đi</div>
+							<div class="artist-singer">K-ICM, APJ</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/fc329ba9455f7e596aa24e798134bf18.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Xa Mặt Đã Cách Lòng</div>
+							<div class="artist-singer">Thùy Chi</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Lời Anh Muốn Nói</div>
+							<div class="artist-singer">Jon</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						      <img src="./images/5106e4259047de14e0d50ff01891dfe7.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Cứ Vội Vàng</div>
+							<div class="artist-singer">Minh Vương M4U</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Thiệp Hồng</div>
+							<div class="artist-singer">Thùy Chi</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Xin Cô Đơn Đi</div>
+							<div class="artist-singer">K-ICM, APJ</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/fc329ba9455f7e596aa24e798134bf18.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Xa Mặt Đã Cách Lòng</div>
+							<div class="artist-singer">Thùy Chi</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Lời Anh Muốn Nói</div>
+							<div class="artist-singer">Jon</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						      <img src="./images/5106e4259047de14e0d50ff01891dfe7.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Cứ Vội Vàng</div>
+							<div class="artist-singer">Minh Vương M4U</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+					<div class="list-song">
+						<div class="card-image">
+						    <div class="image">
+						    	<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album">
+						    </div>
+						    <div class="overlay"></div>
+						    <div class="play-actions">
+						      <i class="fas fa-play"></i>
+						    </div>
+					  	</div>
+						<div class="card-info">
+							<div class="title">Thiệp Hồng</div>
+							<div class="artist-singer">Thùy Chi</div>
+					  	</div>
+					  	<div class="extension">
+						    <ul>
+						      <li><i class="fas fa-microphone-alt"></i></li>
+						      <li><i class="fas fa-ellipsis-h"></i></li>
+						    </ul>
+					  	</div>
+					</div>
+				</div>
+			</div>
+			</div>
+		</section>
+		<section class="recently-listen">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="title-music"><a href="#">Nhạc Trẻ Gây Nghiện</a></div>
+						<div class="album-slider">
+							<div class="slick-wrapper">
+  								<div class="slick">
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/dbf2a8721739fcf0fd9f79de80606609.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/d2641c5296a98477733634c54b6f6e3c.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/3f243488297453c2d0abae307ee6b92a.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/2ae04674e6ff4477d8d40ff06de6d8bf.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>											
+  								</div>
+  							</div>		
+						</div>					
+					</div>
+				</div>
+			</div>			
+		</section>
+
 	</main>
 	<footer></footer>
 	<script type="text/javascript">
