Edit homepage add album-category

--- a/index.html
+++ b/index.html
@@ -1937,7 +1937,80 @@
 				</div>
 			</div>			
 		</section>
-
+		<section class="album-category">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="title-music"><a href="#">Thể Loại</a></div>
+						<div class="slick-wrapper">
+							<div class="slick">
+								<div class="slide-item">
+									<div class="album-item">
+										<div class="card-image">
+											<img src="../images/nhac-viet.jpg" alt="album" />
+										    <div class="overlay-gradient">
+										    	<span>Nhạc Việt</span>
+										    </div>
+										</div>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="album-item">
+										<div class="card-image">
+										    <img src="../images/nhac-au-my.jpg" alt="album" />
+										    <div class="overlay-gradient">
+										    	<span>Nhạc Âu Mỹ</span>
+										    </div>
+										</div>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="album-item">
+										<div class="card-image">
+										    <img src="../images/nhac-dance.jpg" alt="album" />
+										    <div class="overlay-gradient">
+										    	<span>Nhạc Dance</span>
+										    </div>
+										</div>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="album-item">
+										<div class="card-image">
+										    <img src="../images/nhac-han.jpg" alt="album" />
+										    <div class="overlay-gradient">
+										    	<span>Nhạc Hàn</span>
+										    </div>
+										</div>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="album-item">
+										<div class="card-image">
+										    <img src="../images/nhac-hoa.jpg" alt="album" />
+										    <div class="overlay-gradient">
+										    	<span>Nhạc Hoa</span>
+										    </div>
+										</div>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="album-item">
+										<div class="card-image">
+										    <img src="../images/nhac-nhat.jpg" alt="album" />
+										    <div class="overlay-gradient">
+										    	<span>Nhạc Nhật</span>
+										    </div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer></footer>
 	<script type="text/javascript">
