Edit homepage, add footer

--- a/index.html
+++ b/index.html
@@ -2012,7 +2012,49 @@
 			</div>
 		</section>
 	</main>
-	<footer></footer>
+	<footer class="bg-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="license-logo clearfix">
+						<span class="logo"></span>
+						<div class="license-info">
+							<div class="copyright">Một sản phẩm của Zalo</div>
+						</div>
+					</div>
+					<ul class="nav-footer">
+						<li>
+							<a href="#" class="link" title="Giới thiệu">Giới thiệu</a>
+						</li>
+						<li>
+							<div class="link link-special">•</div>
+						</li>
+						<li>
+							<a href="#" class="link" title="Liên hệ" target="_blank">Liên hệ</a>
+						</li>
+						<li>
+							<div class="link link-special">•</div>
+						</li>
+						<li>
+							<a href="#" class="link" title="Quảng cáo" target="_blank">Quảng cáo</a>
+						</li>
+						<li>
+							<div class="link link-special">•</div>
+						</li>
+						<li>
+							<a href="#" class="link" title="Góp ý" target="_blank">Góp ý</a>
+						</li>
+						<li>
+							<div class="link link-special">•</div>
+						</li>
+						<li>
+							<a href="#" class="link" title="Thỏa thuận sử dụng" target="_blank">Thỏa thuận sử dụng</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script type="text/javascript">
 		$('.slick').slick({
 			rows: 1,
